--- a/Game/pom.xml
+++ b/Game/pom.xml
@@ -103,6 +103,11 @@
             <artifactId>steamworks4j</artifactId>
             <version>${steamworks4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.spair</groupId>
+            <artifactId>imgui-java-app</artifactId>
+            <version>1.86.1</version>
+        </dependency>
     </dependencies>
 
 </project>
