--- a/Game/pom.xml
+++ b/Game/pom.xml
@@ -15,6 +15,7 @@
         <joml.version>1.10.3</joml.version>
         <steamworks4j.version>1.8.0</steamworks4j.version>
         <lwjgl.natives>natives-windows</lwjgl.natives>
+        <imgui.java.version>1.86.1</imgui.java.version>
     </properties>
 
     <dependencyManagement>
@@ -105,8 +106,18 @@
         </dependency>
         <dependency>
             <groupId>io.github.spair</groupId>
-            <artifactId>imgui-java-app</artifactId>
-            <version>1.86.1</version>
+            <artifactId>imgui-java-binding</artifactId>
+            <version>${imgui.java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.spair</groupId>
+            <artifactId>imgui-java-lwjgl3</artifactId>
+            <version>${imgui.java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.spair</groupId>
+            <artifactId>imgui-java-natives-windows</artifactId>
+            <version>${imgui.java.version}</version>
         </dependency>
     </dependencies>
 
