--- a/Game/pom.xml
+++ b/Game/pom.xml
@@ -119,6 +119,11 @@
             <artifactId>imgui-java-natives-windows</artifactId>
             <version>${imgui.java.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
     </dependencies>
 
 </project>
